<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >

    <!--General Strings-->
    <string name="app_name">Lens Cap</string>
    <string name="widgetpromo">Pro Tip: Add the Lens Cap widget to your homescreen to quickly and easily control Lens Cap</string>

    <!--Enable or Disable Device Admin Strings-->
    <string name="enable_device_admin_button">Setup device administrator</string>
    <string name="enable_device_admin_button_enabled">Device administrator enabled</string>
    <string name="error_no_device_admin">Not device administrator, please enable in settings</string>
    <string name="disable_device_admin">Disable device administrator</string>
    <string name="disable_device_admin_help_1">Click Lens Cap</string>
    <string name="disable_device_admin_help_2">Then click \"Deactivate this device administrator\" on the next screen</string>
    <string name="device_admin_already_disabled">Device administrator is already disabled.</string>
    <string name="uninstall">Uninstall Lens Cap</string>

    <!--Put on or take off lens cap strings-->
    <string name="lens_cap_status_off">Lens Cap off</string>
    <string name="lens_cap_status_off2">(Camera Enabled)</string>

    <string name="lens_cap_status_on">Lens Cap on</string>
    <string name="lens_cap_status_on2">(Camera Disabled)</string>

    <string name="lensCapOn">put cap on</string>
    <string name="lensCapOff">take cap off</string>

    <!--Device administrator specific strings-->
    <string name="device_admin_dialog">This app uses the Device Administrator Disable Camera permission. It needs this permission to disable the camera. On the next screen, please activate Device Administrator for Lens Cap.</string>
    <string name="OK">Continue</string>
    <string name="cancel">Cancel</string>

    <string name="device_admin_description">Used to disable the camera(s) (and nothing else)</string>
    <string name="admin_receiver_status_enabled">Lens Cap device administrator activated</string>
    <string name="admin_receiver_status_disable_warning">Deactivate Lens Cap\'s device administrator permissions?</string>
    <string name="admin_receiver_status_disabled">Lens Cap device administrator deactivated</string>

    <string name="warning_android_11">Unfortunately Lens Cap is incompatible with Android 11 and will no longer function properly.</string>
    <string name="warning_android_10">Lens Cap is not compatible with Android 11 (you\'re currently on Android 10).   Make sure you re-enable cameras or uninstall Lens Cap before updating to Android 11. If you don\'t do this, the cameras may remain disabled with no way to re-enable.</string>
    <string name="warning_android_10_title">Warning about upcoming Android 11 update</string>

    <!--Widget Strings-->
    <string name="appwidget_content_description">Toggle Lens Cap on or off</string>

    <!--Quick Settings Tile Strings-->
    <string name="qs_tile_title">Disable Camera</string>
    <string name="qs_tile_enable">Enable Camera</string>
    <string name="qs_tile_description">Description</string>
    <string name="how_to_qs">Quick settings tile help</string>
    <string name="quick_settings_text">New on Android 7+: Quick settings tile</string>
    <string name="qs_show_me_how">Show me how!</string>

    <!--Donation Strings-->
    <string name="donate">Like this app? Buy me some pi!</string>
    <string name="donate_thank_you">Thanks for supporting me! You rock!</string>
    <string name="thumbs_up">Thumbs up!</string>
    <string name="info">Info</string>

</resources>
